Fixed mobile misalignment #5

--- a/themes/crl/less/pagination.less
+++ b/themes/crl/less/pagination.less
@@ -1,6 +1,8 @@
 ul.pagination {
-  display: flex;
-  justify-content: center;
+  @media @normal {
+    display: flex;
+    justify-content: center;
+  }
 
   li {
     a,
